--- a/cashtab/nginx.conf
+++ b/cashtab/nginx.conf
@@ -30,8 +30,9 @@ gzip_types
 server {
   listen 80;
   location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    root   /usr/share/nginx/html,
+          /buildroot/bin;
+    index  index.html index.html;
     location ~ index\.html$ {
         add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
         add_header Pragma "no-cache";
