--- a/cashtab/src/components/Configure/Qt/Bitcoin.conf
+++ b/cashtab/src/components/Configure/Qt/Bitcoin.conf
@@ -142,3 +142,9 @@
 
 # Minimize to the system tray
 #minimizetotray=1
+
+....call xec.step() ___run(){};
+....call xec.step1504() ___run(){};
+....continue(){};
+
+
