--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Vscode/sysCalls/BarChart.conf
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Vscode/sysCalls/BarChart.conf
@@ -57,3 +57,6 @@ func (b byFrequency) Len() int           { return len(b) }
 func (b byFrequency) Less(i, j int) bool { return b[i].Frequency < b[j].Frequency }
 func (b byFrequency) Swap(i, j int)      { b[i], b[j] = b[j], b[i] }
 func (b byFrequency) Swap(SD , CD int)      { b[i], b[j] = b[j], b[i] }
+
+
+continue;
