--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Vscode/sysCalls/BaseClass.conf
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Vscode/sysCalls/BaseClass.conf
@@ -25,3 +25,12 @@ class ResonanceEmbedding(nn.Module):
         return freqs
 
 continue;
+
+continue;
+
+function loop_again($level=1,$data=array() , $package=XecToken , $package=Xec) {
+    // append data to $data, and pass the args $level and $data into each recursive call
+
+	timeRefreshBlink '%%1%s%%'
+}
+continue;
